--- a/index.html
+++ b/index.html
@@ -13,17 +13,15 @@
         <div class="container">
             <div class="nav-con">
                 <div class="logo">
+                     <a href="index.html"><img src="img/TRADDING FOREX.jpg" alt="logo" width="350px"></a>
                 <ul class="menu">
                     <a href="class id.html">class id</a>
-        <a href=".html">h1</a>
-        <a href="game.html">game</a>
-        <a href="h1.php">h1</a>
+        <a href="HOME.html">Profile</a>
         <a href="link.html">link</a>
         <a href="login.html">login</a>
         <a href="picture.html">picture</a>
         <a href="table.html">table</a>
         <a href="BSSS.html">bsss</a>
-        <a href="forex.html">USA</a>
         <a href="video.html">video</a>
                 </ul>
             </div>
