--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>หน้าโฮมของฉัน</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -13,10 +13,10 @@
         <div class="container">
             <div class="nav-con">
                 <div class="logo">
-                     <a href="index.html"><img src="img/TRADDING FOREX.jpg" alt="logo" width="350px"></a>
+                     <a href="HOME.html"><img src="img/TRADDING FOREX.jpg" alt="logo" width="350px"></a>
                 <ul class="menu">
-                    <a href="class id.html">class id</a>
         <a href="HOME.html">Profile</a>
+        <a href="class id.html">class id</a>
         <a href="link.html">link</a>
         <a href="login.html">login</a>
         <a href="picture.html">picture</a>
